Updated thread programming